samples/invalid/03-unquoted-label.mmd
%% Diagram: Unquoted labels

direction LR

a[Unquoted Label]
